<resources>
    <string name="app_name">Fargo Event App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_hint">Username</string>
    <string name="login_header">Events</string>
    <string name="login_button">Login</string>
    <string name="password_hint">Password</string>
    <string name="events_header">Events in Fargo</string>
    <string name="invalid_login_text">Incorrect username or password.</string>
    <string name="logout_action">Logout</string>
    <string name="event_image">Event Image</string>
    <string name="event_name">Event Name</string>
    <string name="event_information">Event information</string>
    <string name="event_image_text">Event Image</string>
    <string name="speakers_header_text">Speaker</string>
    <string name="event_retrieve_error">Error Retrieve Event</string>
    <string name="username_punctuation_error">Username can only contain numbers and letters</string>
    <string name="login_spaces_error">Username and password cannot contain spaces</string>
    <string name="username_invalid_punctation">Invalid Username (Can only contain letters and numbers)</string>
    <string name="server_request_error">Server Request Error</string>
    <string name="empty_login">Password or username is empty</string>
    <string name="event_title">Event Title</string>
    <string name="no_date">No date</string>
    <string name="no_location">No location</string>
    <string name="no_information_on_speaker">No information on speaker</string>
    <string name="no_speakers">No Speakers</string>
    <string name="connection">Connection:</string>
</resources>