<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        app:cardElevation="2dp"
        app:cardBackgroundColor="#fffcf5"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/eventCardImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/event_image"
                android:src="@drawable/not_found_image"
                android:layout_marginBottom="8dp"
                app:srcCompat="@drawable/not_found_image" />

            <TextView
                android:id="@+id/eventCardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/eventCardImage"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/eventCardImage"
                android:text="@string/event_name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/eventCardInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_below="@id/eventCardTitle"
                android:layout_marginTop="1dp"
                android:layout_centerHorizontal="true"
                android:text="@string/event_information"
                android:textSize="15sp"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>